--- a/_posts/2011-07-30-toshiba-nb550d.md
+++ b/_posts/2011-07-30-toshiba-nb550d.md
@@ -5,8 +5,9 @@ tags : [tech]
 ---
 {% include JB/setup %}
 
-First off, briefly with the review. It looks very nice, but personally any laptop that isn't completely black (like my previous two) are nice. Battery life-wise, my own run of battery eater classic reached about 5 hours, so not bad. Speakers are superb for a netbook, and since I've never had any proper speakers with bass, the netbook speakers are arguably the best in my house. However, if you try to play music while typing on the keyboard, the sound goes all weird and echoey. Multitouch touchpad is quite fun, but the scrolling often overshoots. The keyboard has the right resistance, but some of the other keys (control, alt etc) are a tad too small. I'm not very used to typing on it, but that probably just because I'm used to the american keyboard.
+First off, briefly with the review. It looks nice, but personally any laptop that isn't completely black (like my previous two) are nice. Battery life-wise, my own run of battery eater classic reached about 5 hours, so not bad. Speakers are superb for a netbook, and since I've never had any proper speakers with bass, the netbook speakers are arguably the best in my house. However, if you try to play music while typing on the keyboard, the sound goes all weird and echoey. Multitouch touchpad is quite fun, but the scrolling often overshoots. The keyboard has the right resistance, but some of the other keys (control, alt etc) are too small. I'm not very used to typing on it, but that probably just because I'm used to the US keyboard.
 
+<!--more-->
 No qualms about the screen, but I haven't taken it outside to be used yet. The ports are a bit stiff to start off with, but plugging things in gets easier (and looser) over time. The HDMI ports are full size, not mini-HDMI (as I had suspected after ordering it) For a netbook, the weight is a bit on the heavy side, but nothing too serious. The power button is awkwardly placed, so you can turn it on with the screen shut. However, you do need to hold it down for half a second or so, so that reduces the chances of turning it on accidentally. The touchpad buttons stick out a bit, so you can still click them with the screen shut. But they appear to be disabled when the screen is closed. The battery and the bottom is designed so there is a substantial gap between the table surface and the air inlet. However, the fan can get noisy when it occasionally maxes out.
 
 After buying the netbook, the first thing I did was replace the 1GB with 4GB RAM. There's only one slot available, much like most netbooks. Although the specifications state that the maximum is 2GB, I read online that that limit is only imposed by Windows 7 Starter. After the RAM replacement and 'hacking' my Windows, it presented me with something like 2.4GB RAM usable. That was due to the 32 bit operating system, so I reinstalled Windows from scratch, using a 64-bit version. With the 64-bit Windows, the usably RAM was more reasonable at 3.6GB, with ~400MB reserved for the graphics. Note that since the recovery of Windows using the Toshiba recovery is dependent on booting the image from the 2nd partition, reinstalling Windows rewrites the MBR is effectively permanently cripples the recovery. I also noticed there was 400MB at the start of the HDD called 'System (Reserved)'. After deleting that to recoup some more space, Windows failed to boot, and I had to wipe and reinstall again. Windows, during installation automatically leaves some space at the start of the HDD as reserved, but 1) it's only 100MB, siginificantly better than the 400MB reserved by Toshiba dn 2) there are ways around it, just google '100MB reserved partition'. I took the latter option.
